--- a/src/containers/Header.scss
+++ b/src/containers/Header.scss
@@ -4,6 +4,11 @@ $header-color: #f9f3da;
   display: flex;
   justify-content: space-between;
   padding: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 
   .icon {
     width: 36px;
@@ -15,7 +20,7 @@ $header-color: #f9f3da;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: $header-color;
     gap: 16px;
     &::before,
