--- a/src/components/Car.scss
+++ b/src/components/Car.scss
@@ -5,10 +5,11 @@ $car-images-url: "../../public/images/";
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-shadow: 0 1px 3px rgb(0 0 0 / 0.25);
   .info {
     position: relative;
     width: auto;
-    height: 70vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
