--- a/src/containers/Header.scss
+++ b/src/containers/Header.scss
@@ -22,6 +22,7 @@ $header-color: #f9f3da;
     align-items: center;
     font-size: 1.5rem;
     color: $header-color;
+    text-shadow: 0 1px 3px rgb(0 0 0 / 0.25);
     gap: 16px;
     &::before,
     &::after {
