--- a/src/components/Car.scss
+++ b/src/components/Car.scss
@@ -54,5 +54,6 @@ $car-images-url: "../../public/images/";
     font-size: 1.25rem;
     color: $main-color;
     text-align: center;
+    margin-bottom: 16px;
   }
 }
