--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
+@import "/src/styles/mixin";
+
 .main {
   width: 100%;
   height: 100%;
   font-size: 16px;
+  @include screen-mobile {
+    font-size: 14px;
+  }
 }
