--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -28,12 +28,16 @@
     top: 10%;
     left: 54px;
     right: 54px;
+    padding: 16px;
   }
   @include screen-md {
     width: 60%;
     top: 20%;
     left: 20%;
     padding: 20px;
+  }
+  @include screen-lg {
+    top: 10%;
   }
   height: auto;
   max-height: 80vh;
@@ -88,6 +92,9 @@
           font-size: 2em;
           transform: scaleY(1.2);
         }
+        @include screen-sm {
+          font-size: 2.5em;
+        }
         font-weight: 600;
       }
     }
@@ -95,10 +102,8 @@
       font-family: "Montserrat";
       display: flex;
       flex-direction: column;
-      @include screen-lg {
-        flex-direction: row;
-      }
       gap: 32px;
+      max-height: 70vh;
       .description {
         overflow-y: auto;
         letter-spacing: -0.225px;
