--- a/src/containers/Header.scss
+++ b/src/containers/Header.scss
@@ -2,7 +2,7 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 16px;
   position: fixed;
   top: 0;
